# hanford_wire_manipulator_with_camera_description

./: .asset_hash  .gitignore  CMakeLists.txt  README.md  config.yaml  notes.txt  package.xml
launch/: display.launch.py
meshes/: base_link.STL  link_1.STL  pulley.STL  tank_base_link.STL
meshes/robot/: end_effector.STL  link_2.STL  link_3.STL
meshes/tank/: TestBase_pipe.stl  TestBase_pipe.usd  TestBase_plates.stl  TestBase_plates.usd  TestLetters.stl  TestLetters.usd  TestLid_Pass_Thrus.stl  TestLid_Pass_Thrus.usd  TestPit_Lid.stl  TestPit_Lid.usd  TestPit_connections.stl  TestPit_connections.usd  TestPump_Equipment_2_base.stl  TestPump_Equipment_2_base.usd  TestPump_equipment_1.stl  TestPump_equipment_1.usd  TestPump_equipment_1_base.stl  TestPump_equipment_1_base.usd  TestPump_equipment_2.stl  TestPump_equipment_2.usd  TestPump_equipment_2_001.stl  TestPump_equipment_2_001.usd  TestRepresentative_Pit_Configuration_1_FULL.stl  TestRepresentative_Pit_Configuration_1_FULL.usd  TestSide_connections.stl  TestSide_connections.usd  Testthing.stl  Testthing.usd
meshes/tank/TestBase_pipe/: TestBase_pipe.usd
meshes/tank/TestBase_plates/: TestBase_plates.usd
meshes/tank/TestLetters/: TestLetters.usd
meshes/zed_x_mini/: Mesh_056.stl  Mesh_057.mtl  Mesh_057.stl  Mesh_058.stl  Mesh_063.stl  Mesh_064.mtl  Mesh_065.mtl  Mesh_065.stl  Mesh_075.stl  Mesh_077.mtl
scripts/: full_range.py  keyboard_range.py
urdf/: robot_pit_end_effector.urdf
usd/: tank.usd
usd/configuration/: hanford_arm_base.usd  hanford_arm_physics.usd  hanford_arm_robot.usd  hanford_arm_sensor.usd
(+11 files in other folders)
